# senseair_s8

./: .gitignore  LICENSE  README.md  build-and-upload-to-pypi.sh  pyproject.toml  senseair_s8.py  setup.py
.github/workflows/: publish.yml  qa.yml
senseair_s8/: __init__.py  __main__.py  senseair_s8.py
tests/: test_senseair_s8.py
